# cs-1550-Project-2-trafficsim

./: .gitignore  CMakeLists.txt  README.md  common.tcl  run.tcl  trafficsim.c
lib/: CMakeLists.txt
lib/include/: controller.h  draw.h  library.h  model.h  traffic_rules.h  view.h
lib/src/: controller.c  draw.c  library.c  model.c  traffic_rules.c  view.c
test/mainTests/: CMakeLists.txt  library_tests.cpp  mother.cpp  mother.h
